--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -7,10 +9,24 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: tuskerGrotesk;
+  src: url(TuskerGrotesk-5500Medium.ttf);
+}
+
+@font-face {
+  font-family: tuskerGroteskTall;
+  src: url(TuskerGrotesk-3500Medium.ttf);
+}
+
+@font-face {
+  font-family: montreal;
+  src: url(NeueMontreal-Regular.otf);
+}
+
+@font-face {
+  font-family: migra;
+  src: url(Migra-Extralight.ttf);
 }
 
 .App-header {
@@ -22,21 +38,152 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .headshot {
-  width: 35%;
+  width: 75%;
+  padding: 5%;
+}
+
+.top-section {
+  background-color: #c0a742;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-family: montreal;
+  background-image: url(images/marble-background.webp) ;
+  background-size: 100%;
+  height: 720px;
+}
+
+/* .name-box {
+  background-color: #3734346b;
+} */
+
+.animate-charcter
+{
+   /* text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #ecd31c 10%,
+    #FFFFFF 29%,
+    #FFFFFF 50%,
+    #eee288 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 7s linear infinite;
+  display: inline-block; */
+  font-size: 170px;
+  font-family: tuskerGroteskTall;
+  color: #494848;
+  padding-top: 30px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+.container {
+  position: relative; right: 5%; top: 5%;
+}
+
+.description {
+  position: relative; right: 5%; left: 20%; top: 220%;
+  width: 50%;
+  background-color: #3734346b;
+  font-size: larger;
+}
+
+.bio {
+  margin: auto;
+  width: 55%;
+  font-size: 20px;
+  padding: 50px;
+  font-family: montreal;
+  color: #FFFFFF;
+}
+
+.bio-header {
+  font-family: tuskerGroteskTall;
+  font-size: 130px;
+}
+
+.projects {
+  margin: auto;
+  padding: 100px;
+  /* border: solid;
+  border-width: 15px;
+  border-color: #c0a742; */
+  background-color: #c9c6b7
+}
+
+.project-header {
+  position: relative; right: 35%;
+  font-family: tuskerGroteskTall;
+  font-size: 130px;
+  color: #494848;
+}
+
+.bio-section {
+  background-color: #6d6959;
+}
+
+.education-section {
+  background-color: #ede39b;
+  padding: 100px;
+  background-image: url(images/marble-background.webp) ;
+  background-size: 100%;
+}
+
+.education-header {
+  position: relative; left: 35%;
+  font-family: tuskerGroteskTall;
+  font-size: 130px;
+  color: #494848;
+}
+
+.edu-cards {
+  padding-top: 100px;
+}
+
+.navbar {
+  width: 100%;
+  position: fixed;
+  z-index: 10;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  font-family: migra;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.main-body {
+  position: absolute; top: 7%;
+}
+
+.contact-section {
+  background-color: #6d6959;
+  border: solid;
+  border-width: 15px;
+  border-color: #FFFFFF;
+}
+
+.linkedin {
+  width: 50%;
+}
+
+.email {
+  width: 30%;
+}
+
+.github {
+  width: 40%;
 }
