--- a/src/App.css
+++ b/src/App.css
@@ -47,18 +47,11 @@
 }
 
 .top-section {
-  background-color: #c0a742;
+  width: 100%;
   color: #FFFFFF;
   font-weight: bold;
   font-family: montreal;
-  background-image: url(images/marble-background.webp) ;
-  background-size: 100%;
-  height: 720px;
 }
-
-/* .name-box {
-  background-color: #3734346b;
-} */
 
 .animate-charcter
 {
@@ -82,7 +75,10 @@
   font-size: 170px;
   font-family: tuskerGroteskTall;
   color: #494848;
-  padding-top: 30px;
+}
+
+.name {
+  position: relative; bottom: 110%;
 }
 
 @keyframes textclip {
@@ -96,7 +92,7 @@
 }
 
 .description {
-  position: relative; right: 5%; left: 20%; top: 220%;
+  position: relative; right: 5%; left: 20%; top: 100%;
   width: 50%;
   background-color: #3734346b;
   font-size: larger;
@@ -122,7 +118,6 @@
   /* border: solid;
   border-width: 15px;
   border-color: #c0a742; */
-  background-color: #c9c6b7
 }
 
 .project-header {
@@ -137,10 +132,7 @@
 }
 
 .education-section {
-  background-color: #ede39b;
   padding: 100px;
-  background-image: url(images/marble-background.webp) ;
-  background-size: 100%;
 }
 
 .education-header {
@@ -170,10 +162,8 @@
 }
 
 .contact-section {
-  background-color: #6d6959;
-  border: solid;
-  border-width: 15px;
-  border-color: #FFFFFF;
+  margin: auto;
+  padding: 100px;
 }
 
 .linkedin {
@@ -186,4 +176,48 @@
 
 .github {
   width: 40%;
+}
+
+.card-subtitle {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.github-logo {
+  width: 30%;
+}
+
+body {
+  transition: background-color 1s ease;
+}
+
+/* panel styles */
+.panel {
+  /* min height incase content is higher than window height */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* outline: 10px solid hotpink; */
+  /* turn above on to see the edge of panels */
+}
+
+/* colours */
+.color-white {
+  background-image: url(images/marble-background.webp) ;
+  background-size: 100%;
+}
+
+.color-dark {
+  background-color: #6d6959;
+}
+.color-projects {
+  background-color: #c9c6b7;
+}
+.color-education {
+  background-color: #f5f3e9;
+}
+
+.footer {
+  width: 100%;
 }
