--- a/src/App.css
+++ b/src/App.css
@@ -77,9 +77,9 @@
   color: #494848;
 }
 
-.name {
-  position: relative; bottom: 110%;
-}
+/* .name {
+  width: 100%;
+} */
 
 @keyframes textclip {
   to {
@@ -87,12 +87,12 @@
   }
 }
 
-.container {
+/* .container {
   position: relative; right: 5%; top: 5%;
-}
+} */
 
 .description {
-  position: relative; right: 5%; left: 20%; top: 100%;
+  align-items: center;
   width: 50%;
   background-color: #3734346b;
   font-size: larger;
@@ -195,7 +195,7 @@ body {
 .panel {
   /* min height incase content is higher than window height */
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   height: 100vh;
   /* outline: 10px solid hotpink; */
