top section and bio section converted to flexbox

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,7 @@
 }
 
 .headshot {
-  width: 75%;
-  padding: 5%;
+  width: 520px;
 }
 
 .top-section {
@@ -53,33 +52,15 @@
   font-family: montreal;
 }
 
-.animate-charcter
+.name
 {
-   /* text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #ecd31c 10%,
-    #FFFFFF 29%,
-    #FFFFFF 50%,
-    #eee288 100%
-  );
-  background-size: auto auto;
-  background-clip: border-box;
-  background-size: 200% auto;
-  color: #fff;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: textclip 7s linear infinite;
-  display: inline-block; */
   font-size: 170px;
   font-family: tuskerGroteskTall;
   color: #494848;
+  position: absolute;
+  top: 5%;
+  right: 3%;
 }
-
-/* .name {
-  width: 100%;
-} */
 
 @keyframes textclip {
   to {
@@ -87,24 +68,22 @@
   }
 }
 
-/* .container {
-  position: relative; right: 5%; top: 5%;
-} */
-
 .description {
   align-items: center;
-  width: 50%;
   background-color: #3734346b;
   font-size: larger;
+  position: absolute;
+  bottom: 15%;
+  width: 30%;
+  left: 6%;
 }
 
 .bio {
-  margin: auto;
-  width: 55%;
+  width: 100%;
   font-size: 20px;
-  padding: 50px;
   font-family: montreal;
   color: #FFFFFF;
+  margin-top: 25%;
 }
 
 .bio-header {
@@ -147,6 +126,7 @@
 }
 
 .navbar {
+  display: flex;
   width: 100%;
   position: fixed;
   z-index: 10;
@@ -195,11 +175,8 @@ body {
 .panel {
   /* min height incase content is higher than window height */
   display: flex;
-  /* align-items: center; */
-  justify-content: center;
   height: 100vh;
-  /* outline: 10px solid hotpink; */
-  /* turn above on to see the edge of panels */
+  width: 100%;
 }
 
 /* colours */
@@ -220,4 +197,23 @@ body {
 
 .footer {
   width: 100%;
+}
+
+.panel-item {
+  flex-basis: 40%;
+}
+
+.top-row {
+  display: flex;
+  position: relative;
+  height: 100vh;
+}
+
+.bio-row {
+  display: flex;
+  position: relative;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: space-evenly;
+  gap: 10%;
 }
