--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@ body {
 .panel {
   /* min height incase content is higher than window height */
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 }
 
