--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,8 @@
 }
 
 .headshot {
-  width: 520px;
+  max-width: 40vw;
+  max-height: 80vh;
 }
 
 .top-section {
@@ -54,7 +55,7 @@
 
 .name
 {
-  font-size: 170px;
+  font-size: 13vw;
   font-family: tuskerGroteskTall;
   color: #494848;
   position: absolute;
@@ -71,7 +72,7 @@
 .description {
   align-items: center;
   background-color: #3734346b;
-  font-size: larger;
+  font-size: 3vw;
   position: absolute;
   bottom: 15%;
   width: 30%;
@@ -80,7 +81,7 @@
 
 .bio {
   width: 100%;
-  font-size: 20px;
+  font-size: 18px;
   font-family: montreal;
   color: #FFFFFF;
   margin-top: 25%;
@@ -88,7 +89,7 @@
 
 .bio-header {
   font-family: tuskerGroteskTall;
-  font-size: 130px;
+  font-size: 12vw;
 }
 
 .projects {
@@ -102,7 +103,7 @@
 .project-header {
   position: relative; right: 35%;
   font-family: tuskerGroteskTall;
-  font-size: 130px;
+  font-size: 12vw;
   color: #494848;
 }
 
@@ -117,12 +118,12 @@
 .education-header {
   position: relative; left: 35%;
   font-family: tuskerGroteskTall;
-  font-size: 130px;
+  font-size: 12vw;
   color: #494848;
 }
 
 .edu-cards {
-  padding-top: 100px;
+  padding-top: 5vw;
 }
 
 .navbar {
@@ -180,10 +181,11 @@ body {
   align-items: center;
 }
 
+
 /* colours */
 .color-white {
   background-image: url(images/marble-background.webp) ;
-  background-size: 100%;
+  background-size: 230%;
 }
 
 .color-dark {
@@ -193,15 +195,16 @@ body {
   background-color: #c9c6b7;
 }
 .color-education {
-  background-color: #f5f3e9;
+  background-color: #FFFFFF;
 }
+
 
 .footer {
   width: 100%;
 }
 
 .panel-item {
-  flex-basis: 40%;
+  flex-basis: 80%;
 }
 
 .top-row {
@@ -227,14 +230,15 @@ body {
 }
 
 .project-card {
-  margin: 0;
+  margin: 5;
   padding: 0;
-  flex-basis: 29.33%;
+  flex-basis: 80%;
 }
 
 .project-text {
   background-color: #FFFFFF;
   padding: 1rem;
+  min-height: 300px;
 }
 
 .edu-row {
@@ -263,7 +267,48 @@ body {
 }
 
 .contact-link {
-  margin: 0;
+  margin-bottom: 12vh;
   padding: 0;
+  flex-basis: 80%;
+}
+
+.email-form {
   flex-basis: 30%;
+  background-color: #FFFFFF;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.form-contents {
+  margin-bottom: 10px;
+}
+
+.form-header {
+  font-family: tuskerGroteskTall;
+  padding: 10px;
+}
+
+@media (min-width: 600px) {
+  .color-white {
+    background-size: 180%;
+  }
+  .description {
+    font-size: 1.8vw;
+  }
+  .panel-item {
+    flex-basis: 40%;
+  }
+  .project-card {
+    flex-basis: 29.33%;
+  }
+  .contact-link {
+    flex-basis: 30%;
+    margin: 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .color-white {
+    background-size: 100%;
+  }
 }
